# unfoldTACPN

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-win.yml
Tests/TAPAAL-test-nets/: 000-untimed-discrete-test012.xml
include/: TAPNBuilderInterface.h  unfoldtacpn.h
include/Colored/: ColoredNetStructures.h  ColoredPetriNetBuilder.h  Colors.h  Expressions.h  Multiset.h  TimeInterval.h  TimeInvariant.h
include/PQL/: Contexts.h  Expressions.h  PQL.h  PQLParser.h  SMCExpressions.h  Visitor.h  XMLPrinter.h
include/PetriEngine/: AbstractPetriNetBuilder.h  NetStructures.h  PetriNet.h  PetriNetBuilder.h  TAPNBuilderInterface.h  options.h
include/PetriEngine/Colored/: ColoredNetStructures.h  ColoredPetriNetBuilder.h  Colors.h  Expressions.h  Multiset.h  TimeInterval.h  TimeInvariant.h
include/PetriEngine/PQL/: Contexts.h  Expressions.h  PQL.h  PQLParser.h  Visitor.h
include/PetriParse/: PNMLParser.h  QueryParser.h  QueryXMLParser.h
src/: CMakeLists.txt  VerifyPN.cpp  VerifyPN.cpp.~1~  VerifyPN.cpp.~2~  unfoldtacpn.cpp
src/Colored/: CMakeLists.txt  ColoredPetriNetBuilder.cpp  Colors.cpp  Expression.cpp  Multiset.cpp  TimeInterval.cpp  TimeInvariant.cpp
src/PQL/: CMakeLists.txt  Contexts.cpp  Expressions.cpp  PQL.cpp  PQLQueryParser.y  PQLQueryTokens.l  SMCExpressions.cpp  Visitor.cpp  XMLPrinter.cpp
src/PetriEngine/: CMakeLists.txt  PetriNet.cpp  PetriNetBuilder.cpp  Reducer.cpp
src/PetriEngine/Colored/: CMakeLists.txt  ColoredPetriNetBuilder.cpp  Colors.cpp  Multiset.cpp  TimeInterval.cpp  TimeInvariant.cpp
src/PetriEngine/PQL/: CMakeLists.txt  Contexts.cpp  Expressions.cpp  PQL.cpp  PQLQueryParser.y  PQLQueryTokens.l
src/PetriParse/: CMakeLists.txt  PNMLParser.cpp  QueryBinaryParser.cpp  QueryXMLParser.cpp
test/: CMakeLists.txt  DummyBuilder.h  cpn_format_test.cpp  old_format_test.cpp  string_query_test.cpp  xml_query_test.cpp
test/cpn_format/: color_guard_map.xml  color_inv_map.xml  colored_regular_arc.xml  finite_range_member.xml  game.xml  guard_test.xml  guard_test_2.xml  inhib_arc.xml  int_range.pnml  referendum.xml  regular_arc.xml  single_colored_place.xml  single_place.xml  token_ring.pnml  transport_arc.xml  tuple_comp.xml  tuple_comp_2.xml  tuple_test.xml  unfold_loop.pnml
test/old_format/: arc_guard.xml  inhib_arc.xml  regular_arc.xml  single_place.xml  transport_arc.xml
test/string_query/: product.xml
test/xml_query/: game_queries.xml  referendum_query.xml
